@@ -1,0 +1,9 @@
+Possible errors you may see during compiletime:
+
+- In file included from kernel/qt_x11.h:76,
+                 from kernel/qpsprinter.cpp:97:
+/usr/include/X11/Xft/Xft.h:39:10: fatal error: ft2build.h: No such file or directory
+ #include <ft2build.h>
+          ^~~~~~~~~~~~
+
+You need to install libfreetype6-dev or the equivalent package.
